--- a/dev/calc.template
+++ b/dev/calc.template
@@ -6,7 +6,7 @@
     <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.11.4/jquery-ui.min.js"></script>
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jqueryui-touch-punch/0.2.3/jquery.ui.touch-punch.min.js"></script>
     <script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
-    <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet" type="text/css" />
+    <link href="https://fonts.googleapis.com/css?family=PT+Serif:400,400italic,700" rel="stylesheet" type="text/css"/>
     <link type="text/css" rel="stylesheet" href="debtcalc.css" />
     <script type="text/javascript" src="#CANDF#data.js"> </script>
     <script type="text/javascript" src="debtcalc.js"> </script>
@@ -14,94 +14,84 @@
     <title>#CANDT# Debt Control Calculator</title>
   </head>
   <body>
-    <div id="main_content">
-      <h1>#CANDT# Debt Control Calculator</h1>
-      <div id="left_panel">
-	<div id="settings" class="topLevel">
-	  <h2>Debt Target</h2>
-	  <h4>(Percent of GDP in 2026)</h4>
-	  <form id="target_select" action="javascript:void(0);">
-	    <label><input type="radio" name="target" value="stabilize" checked="checked"/>
-	      Stabilize the Debt: <span class="rightJustified">75%</span></label><br/>
-	    <label><input type="radio" name="target" value="balance"/>
-	      Balance the Budget: <span class="rightJustified">57%</span></label><br/>
-	    <label><input type="radio" name="target" value="custom"/>
-	      Choose My Own: <span class="rightJustified"><input type="text" class="inputField" id="custom_target" value="66"/>%</span></label><br/>
-	    
-	    <label><input type="radio" name="target" value="free"/>
-	      No Target</label>
-	  </form>
-	</div>
-	<div id="slider_area" class="topLevel">
-	  <div class="slideContainer">
-	    <h4>Cut Spending</h4>
-	    <h5>Excluding...</h5>
-	    <div class="selector">
-	      <div class="input exclude" id="soc_sec_container">
-		<input type="checkbox" name="soc_sec_exlude" id="soc_sec_exclude"/>
-		<label for="soc_sec_exclude">Social Security</label>
-	      </div>
-	      <div class="input exclude" id="medicare_container">
-		<input type="checkbox" name="medicare_exlude" id="medicare_exclude"/>
-		<label for="medicare_exclude">Medicare</label>
-	      </div>
-	      <div class="inFieldContainer">
-		<span>by <input type="text" id="spending_in" class="inputField" value="0"/> percent</span>
-	      </div>
+    <h1>#CANDT# Debt Control Calculator</h1>
+    <div id="left_panel">
+      <div id="settings" class="topLevel">
+	<h2>Debt Target</h2>
+	<h4>(Percent of GDP in 2026)</h4>
+	<form id="target_select" action="javascript:void(0);">
+	  <label><input type="radio" name="target" value="stabilize" checked="checked"/>
+	    Stabilize the Debt: <span class="rightJustified">75%</span></label><br/>
+	  <label><input type="radio" name="target" value="balance"/>
+	    Balance the Budget: <span class="rightJustified">57%</span></label><br/>
+	  <label><input type="radio" name="target" value="custom"/>
+	    Choose My Own: <span class="rightJustified"><input type="text" class="inputField" id="custom_target" value="66"/>%</span></label><br/>	    
+	  <label><input type="radio" name="target" value="free"/>
+	    No Target</label>
+	</form>
+      </div>
+      <div id="slider_area" class="topLevel">
+	<div class="slideContainer">
+	  <h4>Cut Spending</h4>
+	  <h5>Excluding...</h5>
+	  <div class="selector">
+	    <div class="input exclude" id="soc_sec_container">
+	      <input type="checkbox" name="soc_sec_exlude" id="soc_sec_exclude"/>
+	      <label for="soc_sec_exclude">Social Security</label>
 	    </div>
-	    <p>100%</p>
-	    <div id="spending_slider" class="inputSlider"> </div>
-	    <p>0%</p>
-	    <h5>percent non-excluded</h5>
-	  </div>
-	  <div class="slideContainer">
-	    <h4>Increase Taxes</h4>
-	    <h5>For...</h5>
-	    <div class="selector">
-	      <form id="tax_select" action="javascripts:void(0);">
-		<label>
-		  <input type="radio" name="tax_type" value="all" checked="checked"/>
-		  All</label><br/>
-		<label>
-		  <input type="radio" name="tax_type" value="high"/>
-		  High Earners
-		</label>
-	      </form>
-	      <div class="inFieldContainer">
-		<span>by <input type="text" id="tax_in" class="inputField" value="0"/> points</span>
-	      </div>
+	    <div class="input exclude" id="medicare_container">
+	      <input type="checkbox" name="medicare_exlude" id="medicare_exclude"/>
+	      <label for="medicare_exclude">Medicare</label>
 	    </div>
-	    <p>65%</p>
-	    <div id="tax_slider" class="inputSlider"> </div>
-	    <p>#TMIN#%</p>
-	    <h5>top marginal rate</h5>
-	  </div>
+	    <div class="inFieldContainer">
+	      <span>by <input type="text" id="spending_in" class="inputField" value="0"/> percent</span>
+	    </div>
+	    </div>
+	  <span class="sliderBound">100%</span>
+	  <div id="spending_slider" class="inputSlider"> </div>
+	  <span class="sliderBound">0%</span>
+	  <div class="sliderLabel">percent non-excluded</div>
 	</div>
-	<div id="reset_area" class="topLevel">
-	  <input type="button" id="reset_button" value="Reset"/>
+	<div class="slideContainer">
+	  <h4>Increase Taxes</h4>
+	  <h5>For...</h5>
+	  <div class="selector">
+	    <form id="tax_select" action="javascripts:void(0);">
+	      <label>
+		<input type="radio" name="tax_type" value="all" checked="checked"/>
+		All</label><br/>
+	      <label>
+		<input type="radio" name="tax_type" value="high"/>
+		High Earners
+	      </label>
+	    </form>
+	    <div class="inFieldContainer">
+	      <span>by <input type="text" id="tax_in" class="inputField" value="0"/> points</span>
+	    </div>
+	  </div>
+	  <span class="sliderBound">65%</span>
+	  <div id="tax_slider" class="inputSlider"> </div>
+	  <span class="sliderBound">#TMIN#%</span>
+	  <div class="sliderLabel">top marginal rate</div>
 	</div>
       </div>
-      <div id="right_panel">
-	<div id="chart_area">
-	  <h2>Ten Year Debt Projection</h2>
-	  <div id="#CANDF#_background">
-	    <div id="series_area"> </div>
-	  </div>
-	</div>
-	<div id="results_area" class="topLevel">
-	  <h2>Results</h2>
-	  <h3>Percent change from current law</h3>
-	  <p>Spending cuts (non-interest):
-	    <span class="score" id="spend_cut"></span></p>
-	  <p>Revenue increases:
-	    <span class="score" id="rev_inc"></span></p>
-	  <h3>Debt Reduction Breakdown</h3>
-	  <p>From spending cuts:
-	    <span class="score" id="spend_part"></span></p>
-	  <p>From revenue increases:
-	    <span class="score" id="rev_part"></span></p>
-	</div>
+      <div id="reset_area" class="topLevel">
+	<input type="button" id="reset_button" value="Reset"/>
       </div>
     </div>
-  </body>
+    <div id="right_panel">
+      <div class="chartContainer">
+	<h2>Ten Year Debt Projection</h2>
+	<div id="#CANDF#_background" class="chartBackground">
+	  <div id="series_area"> </div>
+	</div>
+      </div>
+      <div class="chartContainer">
+       <h2>Debt Reduction Breakdown</h2>
+       <div id="pie_background" class="chartBackground">
+	 <div id="pie_area"> </div>
+       </div>
+     </div>
+   </div>
+ </body>
 </html>
