--- a/dev/calc.template
+++ b/dev/calc.template
@@ -5,16 +5,18 @@
     <link rel="stylesheet" href="https://ajax.googleapis.com/ajax/libs/jqueryui/1.11.4/themes/smoothness/jquery-ui.css"/>
     <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.11.4/jquery-ui.min.js"></script>
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jqueryui-touch-punch/0.2.3/jquery.ui.touch-punch.min.js"></script>
+    <script src="http://platform.twitter.com/widgets.js" type="text/javascript"></script>
     <script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
     <link href="https://fonts.googleapis.com/css?family=PT+Serif:400,400italic,700" rel="stylesheet" type="text/css"/>
     <link type="text/css" rel="stylesheet" href="debtcalc.css" />
     <script type="text/javascript" src="#CANDF#data.js"> </script>
     <script type="text/javascript" src="debtcalc.js"> </script>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
-    <title>#CANDT# Debt Control Calculator</title>
+    <link rel="icon" type="image/png" href="favicon.png" />
+    <title>The #CANDT# Debt-Fixer</title>
   </head>
   <body>
-    <h1>#CANDT# Debt Control Calculator</h1>
+    <h1>The #CANDT# Debt-Fixer</h1>
     <div id="left_panel">
       <div id="settings">
 	<h2>Debt Target</h2>
@@ -80,18 +82,20 @@
       </div>
     </div>
     <div id="right_panel">
-      <div class="chartContainer">
+      <div id="series_container" class="chartContainer">
 	<h2>Ten Year Debt Projection</h2>
 	<div id="#CANDF#_background" class="chartBackground">
 	  <div id="series_area"> </div>
 	</div>
       </div>
-      <div class="chartContainer">
+      <div id="series_container" class="chartContainer">
        <h2>Debt Reduction Breakdown</h2>
        <div id="pie_background" class="chartBackground">
 	 <div id="pie_area"> </div>
        </div>
      </div>
-   </div>
+    </div>
+    <div id="bottom_banner">
+    </div>
  </body>
 </html>
