--- a/dev/calc.template
+++ b/dev/calc.template
@@ -16,6 +16,14 @@
     <title>The #CANDT# Debt-Fixer</title>
   </head>
   <body>
+    <div id="fb-root"></div>
+    <script>(function(d, s, id) {
+      var js, fjs = d.getElementsByTagName(s)[0];
+      if (d.getElementById(id)) return;
+      js = d.createElement(s); js.id = id;
+      js.src = "//connect.facebook.net/en_US/sdk.js#xfbml=1&version=v2.7";
+      fjs.parentNode.insertBefore(js, fjs);
+      }(document, 'script', 'facebook-jssdk'));</script>
     <h1>The #CANDT# Debt-Fixer</h1>
     <div id="left_panel">
       <div id="settings">
@@ -96,6 +104,8 @@
      </div>
     </div>
     <div id="bottom_banner">
+      <div id="fb_share" class="fb-share-button" data-href="http://crfb.org/blogs/interactive-tool-reforming-candidates-fiscal-plans" data-layout="button" data-mobile-iframe="true"><a class="fb-xfbml-parse-ignore" target="_blank" href="https://www.facebook.com/sharer/sharer.php?u=http%3A%2F%2Fcrfb.org%2F&amp;src=sdkpreparse">Share</a></div>
+      <div id="tweet_container"></div> 
     </div>
  </body>
 </html>
