--- a/dev/calc.template
+++ b/dev/calc.template
@@ -24,88 +24,90 @@
       js.src = "//connect.facebook.net/en_US/sdk.js#xfbml=1&version=v2.7";
       fjs.parentNode.insertBefore(js, fjs);
       }(document, 'script', 'facebook-jssdk'));</script>
-    <h1>The #CANDT# Debt-Fixer</h1>
-    <div id="left_panel">
-      <div id="settings">
-	<h2>Debt Target</h2>
-	<h4>(Percent of GDP in 2026)</h4>
-	<form id="target_select" action="javascript:void(0);">
-	  <label><input type="radio" name="target" value="stabilize" checked="checked"/>
-	    Stabilize the Debt: <span class="rightJustified">75%</span></label><br/>
-	  <label><input type="radio" name="target" value="balance"/>
-	    Balance the Budget: <span class="rightJustified">57%</span></label><br/>
-	  <label><input type="radio" name="target" value="custom"/>
-	    Choose My Own: <span class="rightJustified"><input type="text" class="inputField" id="custom_target" value="66"/>%</span></label><br/>	    
-	  <label><input type="radio" name="target" value="free"/>
-	    No Target</label>
-	</form>
-      </div>
-      <div id="slider_area">
-	<div class="slideContainer">
-	  <h4>Cut Spending</h4>
-	  <h5>Excluding...</h5>
-	  <div class="selector">
-	    <div class="input exclude" id="soc_sec_container">
-	      <input type="checkbox" name="soc_sec_exlude" id="soc_sec_exclude"/>
-	      <label for="soc_sec_exclude">Social Security</label>
-	    </div>
-	    <div class="input exclude" id="medicare_container">
-	      <input type="checkbox" name="medicare_exlude" id="medicare_exclude"/>
-	      <label for="medicare_exclude">Medicare</label>
-	    </div>
-	    <div class="inFieldContainer">
-	      <span>by <input type="text" id="spending_in" class="inputField" value="0"/> percent</span>
-	    </div>
-	    </div>
-	  <span class="sliderBound">100%</span>
-	  <div id="spending_slider" class="inputSlider"> </div>
-	  <span class="sliderBound">0%</span>
-	  <div class="sliderLabel">percent non-excluded</div>
+    <div id="main_content">
+      <h1>The #CANDT# Debt-Fixer</h1>
+      <div id="left_panel">
+	<div id="settings">
+	  <h2>Debt Target</h2>
+	  <h4>(Percent of GDP in 2026)</h4>
+	  <form id="target_select" action="javascript:void(0);">
+	    <label><input type="radio" name="target" value="stabilize" checked="checked"/>
+	      Stabilize the Debt: <span class="rightJustified">75%</span></label><br/>
+	    <label><input type="radio" name="target" value="balance"/>
+	      Balance the Budget: <span class="rightJustified">57%</span></label><br/>
+	    <label><input type="radio" name="target" value="custom"/>
+	      Choose My Own: <span class="rightJustified"><input type="text" class="inputField" id="custom_target" value="66"/>%</span></label><br/>	    
+	    <label><input type="radio" name="target" value="free"/>
+	      No Target</label>
+	  </form>
 	</div>
-	<div class="slideContainer">
-	  <h4>Increase Taxes</h4>
-	  <h5>For...</h5>
-	  <div class="selector">
-	    <form id="tax_select" action="javascripts:void(0);">
-	      <label>
-		<input type="radio" name="tax_type" value="all" checked="checked"/>
-		All</label><br/>
-	      <label>
-		<input type="radio" name="tax_type" value="high"/>
-		High Earners
-	      </label>
-	    </form>
-	    <div class="inFieldContainer">
-	      <span>by <input type="text" id="tax_in" class="inputField" value="0"/> points</span>
+	<div id="slider_area">
+	  <div class="slideContainer">
+	    <h4>Cut Spending</h4>
+	    <h5>Excluding...</h5>
+	    <div class="selector">
+	      <div class="input exclude" id="soc_sec_container">
+		<input type="checkbox" name="soc_sec_exlude" id="soc_sec_exclude"/>
+		<label for="soc_sec_exclude">Social Security</label>
+	      </div>
+	      <div class="input exclude" id="medicare_container">
+		<input type="checkbox" name="medicare_exlude" id="medicare_exclude"/>
+		<label for="medicare_exclude">Medicare</label>
+	      </div>
+	      <div class="inFieldContainer">
+		<span>by <input type="text" id="spending_in" class="inputField" value="0"/> percent</span>
+	      </div>
 	    </div>
+	    <span class="sliderBound">100%</span>
+	    <div id="spending_slider" class="inputSlider"> </div>
+	    <span class="sliderBound">0%</span>
+	    <div class="sliderLabel">percent non-excluded</div>
 	  </div>
-	  <span class="sliderBound">65%</span>
-	  <div id="tax_slider" class="inputSlider"> </div>
-	  <span class="sliderBound">#TMIN#%</span>
-	  <div class="sliderLabel">top marginal rate</div>
+	  <div class="slideContainer">
+	    <h4>Increase Taxes</h4>
+	    <h5>For...</h5>
+	    <div class="selector">
+	      <form id="tax_select" action="javascripts:void(0);">
+		<label>
+		  <input type="radio" name="tax_type" value="all" checked="checked"/>
+		  All</label><br/>
+		<label>
+		  <input type="radio" name="tax_type" value="high"/>
+		  High Earners
+		</label>
+	      </form>
+	      <div class="inFieldContainer">
+		<span>by <input type="text" id="tax_in" class="inputField" value="0"/> points</span>
+	      </div>
+	    </div>
+	    <span class="sliderBound">65%</span>
+	    <div id="tax_slider" class="inputSlider"> </div>
+	    <span class="sliderBound">#TMIN#%</span>
+	    <div class="sliderLabel">top marginal rate</div>
+	  </div>
+	</div>
+	<div id="reset_area">
+	  <input type="button" id="reset_button" value="Reset"/>
 	</div>
       </div>
-      <div id="reset_area">
-	<input type="button" id="reset_button" value="Reset"/>
-      </div>
-    </div>
-    <div id="right_panel">
-      <div id="series_container" class="chartContainer">
-	<h2>Ten Year Debt Projection</h2>
-	<div id="#CANDF#_background" class="chartBackground">
-	  <div id="series_area"> </div>
+      <div id="right_panel">
+	<div id="series_container" class="chartContainer">
+	  <h2>Ten Year Debt Projection</h2>
+	  <div id="#CANDF#_background" class="chartBackground">
+	    <div id="series_area"> </div>
+	  </div>
+	</div>
+	<div id="pie_container" class="chartContainer">
+	  <h2>Debt Reduction Breakdown</h2>
+	  <div id="pie_background" class="chartBackground">
+	    <div id="pie_area"> </div>
+	  </div>
 	</div>
       </div>
-      <div id="pie_container" class="chartContainer">
-       <h2>Debt Reduction Breakdown</h2>
-       <div id="pie_background" class="chartBackground">
-	 <div id="pie_area"> </div>
-       </div>
-     </div>
+      <div id="bottom_banner">
+	<div id="fb_share" class="fb-share-button" data-href="http://crfb.org/blogs/interactive-tool-reforming-candidates-fiscal-plans" data-layout="button" data-mobile-iframe="true"><a class="fb-xfbml-parse-ignore" target="_blank" href="https://www.facebook.com/sharer/sharer.php?u=http%3A%2F%2Fcrfb.org%2F&amp;src=sdkpreparse">Share</a></div>
+	<div id="tweet_container"></div> 
+      </div>
     </div>
-    <div id="bottom_banner">
-      <div id="fb_share" class="fb-share-button" data-href="http://crfb.org/blogs/interactive-tool-reforming-candidates-fiscal-plans" data-layout="button" data-mobile-iframe="true"><a class="fb-xfbml-parse-ignore" target="_blank" href="https://www.facebook.com/sharer/sharer.php?u=http%3A%2F%2Fcrfb.org%2F&amp;src=sdkpreparse">Share</a></div>
-      <div id="tweet_container"></div> 
-    </div>
- </body>
+  </body>
 </html>
