--- a/dev/calc.template
+++ b/dev/calc.template
@@ -12,18 +12,18 @@
     <script type="text/javascript" src="#CANDF#data.js"> </script>
     <script type="text/javascript" src="debtcalc.js"> </script>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
-    <link rel="icon" type="image/png" href="favicon.png" />
+    <link rel="icon" type="image/png" href="img/favicon.png" />
     <title>The #CANDT# Debt-Fixer</title>
+    <script>
+      (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+      (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+      m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+      })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+      ga('create', 'UA-368921-9', 'auto');
+      ga('send', 'pageview');
+    </script>
   </head>
   <body>
-    <div id="fb-root"></div>
-    <script>(function(d, s, id) {
-      var js, fjs = d.getElementsByTagName(s)[0];
-      if (d.getElementById(id)) return;
-      js = d.createElement(s); js.id = id;
-      js.src = "//connect.facebook.net/en_US/sdk.js#xfbml=1&version=v2.7";
-      fjs.parentNode.insertBefore(js, fjs);
-      }(document, 'script', 'facebook-jssdk'));</script>
     <div id="main_content">
       <h1>The #CANDT# Debt-Fixer</h1>
       <div id="left_panel">
@@ -105,8 +105,20 @@
 	</div>
       </div>
       <div id="bottom_banner">
-	<div id="fb_share" class="fb-share-button" data-href="http://crfb.org/blogs/interactive-tool-reforming-candidates-fiscal-plans" data-layout="button" data-mobile-iframe="true"><a class="fb-xfbml-parse-ignore" target="_blank" href="https://www.facebook.com/sharer/sharer.php?u=http%3A%2F%2Fcrfb.org%2F&amp;src=sdkpreparse">Share</a></div>
-	<div id="tweet_container"></div> 
+	<ul>
+	  <li class="social_item">
+            <a id="twitter_link" class="social_link" href="#">
+              <img class="social_icon" src="img/twitter_icon_white.png" alt="Twitter Icon"/>
+              <span class="social_text">Tweet</span>
+            </a>
+          </li>
+          <li class="social_item">
+            <a id="facebook_link" class="social_link" href="#">
+              <img class="social_icon" src="img/fb_logo_white.png" alt="Facebook Logo"/>
+              <span class="social_text">Share</span>
+            </a>
+          </li>
+	</ul>
       </div>
     </div>
   </body>
