--- a/dev/calc.template
+++ b/dev/calc.template
@@ -9,7 +9,7 @@
     <script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
     <link href="https://fonts.googleapis.com/css?family=PT+Serif:400,400italic,700" rel="stylesheet" type="text/css"/>
     <link type="text/css" rel="stylesheet" href="style.css" />
-    <script type="text/javascript" src="src/cdata.js"> </script>
+    <script type="text/javascript" src="src/gdata.js"> </script>
     <script type="text/javascript" src="src/#CANDF#data.js"> </script>
     <script type="text/javascript" src="src/debtcalc.js"> </script>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
