removed defense, fixed mobile formatting

--- a/dev/calc.template
+++ b/dev/calc.template
@@ -1,4 +1,4 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.o1;95;0crg/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
   <head>
     <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
@@ -55,10 +55,6 @@
 		<input type="checkbox" name="medicare_exlude" id="medicare_exclude"/>
 		<label for="medicare_exclude">Medicare</label>
 	      </div>
-	      <div class="input exclude" id="defense_container">
-		<input type="checkbox" name="defense_exlude" id="defense_exclude"/>
-		<label for="defense_exclude">Defense</label>
-	      </div>
 	      <div class="inFieldContainer">
 		<span>by <input type="text" id="spending_in" class="inputField" value="0"/> percent</span>
 	      </div>
@@ -81,7 +77,6 @@
 		  High Earners
 		</label>
 	      </form>
-	      <br/>
 	      <div class="inFieldContainer">
 		<span>by <input type="text" id="tax_in" class="inputField" value="0"/> points</span>
 	      </div>
